--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Eclipse
+.settings/
+.project
+.classpath
+log/
+logs/
+bin/
+target/
+
+# Vert.x
+.vertx/
+
 # Compiled class file
 *.class
 
@@ -21,3 +33,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
